# core-cpp-api

./: .clang-format  .clang-tidy  CHANGELOG.txt  CMakeLists.txt  Doxyfile  README.md  futoin.json
include/futoin/: all.hpp  any.hpp  asyncsteps.hpp  asynctool.hpp  binarysteps.h  binaryval.h  errors.hpp  fatalmsg.hpp  iasyncsteps.hpp  iasynctool.hpp  ieventemitter.hpp  imempool.hpp  ispec.hpp  ispectools.hpp  string.hpp
include/futoin/details/: any.hpp  asyncloop.hpp  binarymove.hpp  erased_func.hpp  functor_pass.hpp  nextargs.hpp  reqcpp11.hpp  reqcpp14.hpp  reqcpp17.hpp  strip_functor_class.hpp
src/: all.cpp
tests/: .clang-tidy  asyncsteps.test.cpp  compile.test.cpp  example.cpp  iasyncsteps.test.cpp  ieventemitter.test.cpp  ispec.test.cpp  main.test.cpp
